<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>csci310</groupId>
	<artifactId>project</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>Project</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<!--	used for maven tests	-->
		<sqliteDatabaseUrl>jdbc:sqlite:${project.basedir}/database.sqlite3?cipher=chacha20&amp;key=6oDoFUeJ7iWYcTmp4FJSbM2GMMBGDGWF</sqliteDatabaseUrl>
		<ticketmasterApiToken>qq7RqATbnDHFtSJHo3QUJ9f6uMd5cGNn</ticketmasterApiToken>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>5.1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>5.1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-support</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-chrome-driver</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.0.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.willena</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.35.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>5.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp.jstl</groupId>
			<artifactId>javax.servlet.jsp.jstl-api</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>3.14.9</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.8</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>project</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>${project.basedir}</directory>
								<includes>
									<include>database.sqlite3</include>
								</includes>
								<followSymlinks>false</followSymlinks>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.2</version>
					<configuration>
						<filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<excludes>
							<exclude>**/RunCucumberTests.java</exclude>
						</excludes>
						<systemPropertyVariables>
							<dbUrl>${sqliteDatabaseUrl}</dbUrl>
						</systemPropertyVariables>
						<!-- opens java.io and java.lang so that we can mock(PrintWriter.class) -->
						<argLine>
							@{argLine}
							--add-opens java.base/java.io=ALL-UNNAMED
							--add-opens java.base/java.lang=ALL-UNNAMED
						</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<includes>
						<include>**/RunCucumberTests.java</include>
					</includes>
					<systemPropertyVariables>
						<dbUrl>${sqliteDatabaseUrl}</dbUrl>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.4.31.v20200723</version>
				<configuration>
					<scanIntervalSeconds>5</scanIntervalSeconds>
					<jettyXml>${project.basedir}/src/main/resources/jetty.xml, ${project.basedir}/src/main/resources/jetty-ssl.xml, ${project.basedir}/src/main/resources/jetty-https.xml</jettyXml>
					<stopKey>STOP</stopKey>
					<stopPort>8081</stopPort>
					<daemon>true</daemon>
					<webAppConfig>
						<descriptor>${project.basedir}/target/jetty-filtered-resources/web.xml</descriptor>
					</webAppConfig>
				</configuration>
				<executions>
					<execution>
						<id>start-jetty</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>stop</goal>
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>stop-jetty</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.ragedunicorn.tools.maven</groupId>
				<artifactId>sql-execute-maven-plugin</artifactId>
				<version>1.0.2</version>
				<dependencies>
					<dependency>
						<groupId>io.github.willena</groupId>
						<artifactId>sqlite-jdbc</artifactId>
						<version>3.35.5.3</version>
					</dependency>
				</dependencies>
				<configuration>
					<driver>org.sqlite.JDBC</driver>
					<url>${sqliteDatabaseUrl}</url>
					<!-- actually we don't have a user, just placeholders to make the plugin happy -->
					<user>tommy</user>
					<password>trojan</password>
				</configuration>
				<executions>
					<execution>
						<id>create-db-tables</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>sql-execute</goal>
						</goals>
						<configuration>
							<sqlFiles>
								<sqlFiles>src/main/resources/create_tables.sql</sqlFiles>
							</sqlFiles>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<!-- Make maven filter web.xml so we can use that for jetty:run -->
		<resources>
			<resource>
				<directory>src/main/webapp/WEB-INF</directory>
				<filtering>true</filtering>
				<targetPath>../jetty-filtered-resources</targetPath>
			</resource>
		</resources>

	</build>
</project>
